# OpenGL-Template

./: .gitignore  CMakeLists.txt
common/: shader.cpp
tutorial08_basic_shading/: tutorial08.cpp
